force-app/main/default/objects/Address__c/fields/APN_Missing_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>APN_Missing_Auto_Number__c</fullName>
    <displayFormat>Missing APN - {00000}</displayFormat>
    <label>APN Missing Auto Number</label>
    <type>AutoNumber</type>
</CustomField>