force-app/main/default/objects/Address__c/fields/SmartyStreets_Error__c.field-meta.xml
<CustomField>
    <fullName>SmartyStreets_Error__c</fullName>
    <label>SmartyStreets Error</label>
    <type>TextArea</type>
</CustomField>