force-app/main/default/objects/Address__c/fields/Validated_City__c.field-meta.xml
<CustomField>
    <fullName>Validated_City__c</fullName>
    <label>Validated City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>