force-app/main/default/objects/Address__c/fields/Validated_County__c.field-meta.xml
<CustomField>
    <fullName>Validated_County__c</fullName>
    <label>Validated County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>