force-app/main/default/objects/Address__c/fields/Validated_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Validated_Longitude__c</fullName>
    <label>Validated Longitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>