force-app/main/default/objects/Address__c/fields/Validated_State__c.field-meta.xml
<CustomField>
    <fullName>Validated_State__c</fullName>
    <label>Validated State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>