force-app/main/default/objects/Address__c/fields/Validated_Street__c.field-meta.xml
<CustomField>
    <fullName>Validated_Street__c</fullName>
    <label>Validated Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>