force-app/main/default/objects/Address__c/fields/Validated_Zip__c.field-meta.xml
<CustomField>
    <fullName>Validated_Zip__c</fullName>
    <label>Validated Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>